# Technology-Catch-Up-Studying

./: .gitignore  CLAUDE.md  README.md  _gen2.py  _gen_citation_notebook.py  bert_model_comparison_metrics.csv  china_frontier_top2sum_delta.ipynb  cluster-China-Japan.ipynb  cluster_gmm.ipynb  cluster_gmm_1.ipynb  cluster_keybert_from_cluster.ipynb  cluster_kmeans.ipynb  cluster_kmeans_1.ipynb  cut.py  main.py  midterm_analysis_report.md  mincao.ipynb  paper_citation_graph.ipynb  paper_knn_graph.ipynb  paper_knn_graph_Jp.ipynb  paper_pure_citation_net.ipynb  pyproject.toml  time_series_data.ipynb  time_series_hierarchical.ipynb  time_varying_cn_us_citation_trends.ipynb  visualize.ipynb  visualize_trajectory_dimred_hier_dtw.ipynb  小组会议记录.md  模型比较.ipynb
.claude/: settings.local.json
NJU-Beamer/: Topics_papers.docx  slide.fdb_latexmk  slide.nav  slide.tex  slide.toc
backup/: cluster.ipynb  paper_knn_graph_time_window.ipynb
config/: cluster_keybert_from_cluster.json
data/: dataCleanSCIE_Cut.csv
notes/: 技术追赶路径论文框架.md  论文写作完整框架_插图版.md  语义网络.docx
notes/NJU-Beamer/: NJU.sty  ref.bib  slide.aux  slide.fls  slide.out  slide.xdv
scripts/: ast_inject_zh_comments.py  build_china_frontier_top2sum_delta_nb.py  build_country_topic_catchup_autoencoder_nb.py  build_country_topic_catchup_decomposed_nb.py  build_country_topic_catchup_hierarchical_nb.py  gen_country_topic_catchup_kshape_nb.py  gen_country_topic_catchup_round2_nb.py  inject_cluster_zh.py  plot_china_frontier_delta_timeseries.py
scripts/cluster_pipeline/: __init__.py  agglom_pipeline.py  config_utils.py  data_prep.py  device_utils.py  embedding_utils.py  specter2_backend.py
tmp/jupyter-notebook/: build_topic_pipeline_assets.py  check_notebook_compile.py  update_cluster_fuzzy_notebook.py
tmp/matplotlib-cache/: fontlist-v390.json
(+46 files in other folders)
