[project]
name = "catch-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "sentence-transformers>=3.0.0",
    "bertopic>=0.16.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.3.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "scipy>=1.11.0",
    "peft>=0.10.0",
    "ipykernel>=6.0.0",
    "httpx[socks]>=0.28.1",
    "adapters>=1.2.0",
    "nbformat>=5.10.4",
    "faiss-cpu>=1.13.2",
    "pyarrow>=23.0.1",
    "fastparquet>=2025.12.0",
    "tabulate>=0.10.0",
    "statsmodels>=0.14.6",
    "pandas-stubs~=2.3.3",
    "scipy-stubs~=1.15.3",
    "keybert>=0.9.0",
    "huggingface-hub>=0.36.2",
    "openai>=2.31.0",
    "tslearn>=0.8.1",
    "tensorflow>=2.16.0",
    "tf-keras>=2.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
]
